fixed optionbar so it overflows into browser window

--- a/website/src/scss/_base.scss
+++ b/website/src/scss/_base.scss
@@ -15,16 +15,6 @@ h2 {
 .blinkAnimation {
   animation: blinker 2s ease-in-out infinite;
 }
-
-.box {
-  display: flex;
-}
 @keyframes blinker {
   50% { opacity: 0; }
-}
-
-@media(max-width: 700px ){
-  .box{
-    display: none;
-  }
 }
